# pyadr

./: .editorconfig  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc  .pylintrc_behave  .releaserc  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  conftest.py  invoke.yaml  mypy.ini  pyproject.toml  renovate.json  tasks.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: publish.yml  test_and_make_release.yml
behave_ext/: cucumber_json.py
docs/: .gitignore  Makefile  conf.py  index.rst  installation.rst  modules.rst  usage.rst
features/: approve_or_reject_proposed_adr.feature  config.feature  environment.py  generate_index.feature  git_base_step.feature  git_commit.feature  git_config.feature  git_config_shared_with_pyadr.feature  git_init_adr_repo.feature  git_new_adr.feature  init_adr_repo.feature  init_adr_repo_with_config.feature  new_adr.feature  verifications_before_processing_proposed_adr.feature
features.git/: init_adr_repo.feature  new_adr.feature  pre-commit-check.feature
features.git/steps/: use_steplib_behave4git.py
features/git_adr/: accept_or_reject_proposed_adr.feature  adr_only_repo_specific.feature  base_step.feature  commit.feature  generate_toc.feature  helper.feature  helper_adr_only_repo.feature  helper_any_repo.feature  helper_project_repo.feature  init_adr_repo.feature  new_adr.feature  pre-merge-checks.feature
features/pyadr/: accept_or_reject_proposed_adr.feature  check-adr-repo.feature  generate_toc.feature  helper.feature  init_adr_repo.feature  init_adr_repo_with_config.feature  new_adr.feature  verifications_before_processing_proposed_adr.feature
features/steps/: adr_steps.py  git_steps.py  use_steplib_behave4cli.py
pyadr/: __init__.py  __version__.py  cli.py  config.py  const.py  content_utils.py  core.py  exceptions.py  file_utils.py  hello.py  text_utils.py  utils.py
pyadr/assets/: 0000-record-architecture-decisions.md  0001-use-markdown-architectural-decision-records.md  madr-template.md
pyadr/cli/: __init__.py  application.py  commands.py  config.py  io.py
pyadr/git/: config.py  const.py  core.py  exceptions.py  utils.py
pyadr/git/cli/: __init__.py  application.py  commands.py
scripts/: generate_version_file.py  install_poetry.sh  install_pyenv.sh  semantic_release_exec_verify_release.sh  verify_git_tags_new_version_tag_non_existant.sh  verify_git_tags_one_version_tag_present.sh  verify_pypi_env_variables.py  verify_version_not_on_pypi.py
tests/: __init__.py  conftest.py  test_config.py  test_content_utils.py  test_core.py  test_file_utils.py  test_git_config.py  test_git_core_commit.py  test_git_core_init.py  test_git_core_properties.py  test_pyadr.py  test_text_utils.py
