# Largely inspired from (pointing to precise version)
# https://github.com/thejohnfreeman/project-template-python/tree/6d04c7b3b00460bb7473246096c52cc22d403226

# black support portion inspired from (pointing to precise version)
# https://github.com/python/black/blob/4a953b7241ce5f8bcac985fa33fdf3af4f42c0de/pyproject.toml

[tool.poetry]
name = "pyadr"
version = "0.19.0"
description = "CLI to help with an ADR process lifecycle (proposal/approval/rejection/deprecation/superseeding), which used git."
license = "MIT"
homepage = "https://github.com/opinionated-digital-center/pyadr"
authors = ["Emmanuel Sciara <emmanuel.sciara@gmail.com>"]
packages = [
    { include = "pyadr" },
]
keywords = ["pyadr", "adr"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.7"
# Optional dependencies to be part of `test` extra
pytest = {version = "^7.1", optional = true}
pytest-cov = {version = "^3.0", optional = true}
pytest-mock = {version = "^3.2", optional = true}
pytest-html = {version = "^3.1", optional = true}
pytest-asyncio = {version = "^0", optional = true}
# Optional dependencies to be part of `bdd` extra
behave4git = {version = "^0", optional = true}
PyHamcrest = {version = "^2.0", optional = true}
# Optional dependencies to be part of `lint` extra
flake8 = {version = "^4.0", optional = true}
flake8-bugbear = {version = "^22", optional = true}
pydocstyle = {version = "^6.1", optional = true}
pylint = {version = "^2.3", optional = true}
yapf = {version = "^0", optional = true}
# Optional dependencies to be part of `type` extra
mypy = {version = "^0", optional = true}
types-python-slugify = {version = "^5", optional = true}
# Optional dependencies to be part of `format` extra
isort = {version = "^5", optional = true}
black = {version = "stable", optional = true, allow-prereleases = true}
# Optional dependencies to be part of `docs` extra
sphinx = {version = "^4.2", optional = true}
sphinx-autodoc-typehints = {version = "^1.10", optional = true}
sphinx-autobuild = {version = "^2021", optional = true}
sphinx_rtd_theme = {version = "^1", optional = true}
m2r = {version = "^0", optional = true}
# Optional dependencies to be part of `repl` extra
bpython = {version = "^0", optional = true}
# Non optional dependendies
cleo = "^0"
#############################
# Add you dependencies here #
#############################
python-slugify = "^6"
importlib_resources = { version = "^5.0.0", python = "<3.7" }
loguru = "^0"
gitpython = "^3.1"

[tool.poetry.dev-dependencies]
tox = "^3.14"
tox-pyenv = "^1.1"
rope = "^0"

[tool.poetry.extras]
test = ["pytest", "pytest-cov", "pytest-mock", "pytest-html", "pytest-asyncio", "PyHamcrest"]
bdd = ["behave4git", "PyHamcrest"]
lint = ["flake8", "flake8-bugbear", "pydocstyle", "pylint", "yapf"]
type = ["mypy", "types-python-slugify"]
format = ["isort", "black"]
docs= ["m2r", "sphinx", "sphinx-autodoc-typehints", "sphinx-autobuild", "sphinx_rtd_theme"]
repl = ["bpython"]

[tool.poetry.scripts]
pyadr = "pyadr.cli:main"
git-adr = "pyadr.git.cli:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=pyadr --cov-report=html --cov-report=term"
testpaths = [
    "tests",
]

[tool.isort]
# following black's doc for compatibility
# See https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#isort
profile = "black"

[tool.black]
target_version = ["py39"]

[build-system]
requires = ["poetry==1.1.4"]
build-backend = "poetry.masonry.api"
