# Largely inspired from (pointing to precise version)
# https://github.com/thejohnfreeman/project-template-python/tree/6d04c7b3b00460bb7473246096c52cc22d403226

# black support portion inspired from (pointing to precise version)
# https://github.com/python/black/blob/4a953b7241ce5f8bcac985fa33fdf3af4f42c0de/pyproject.toml

[tool.poetry]
name = "pyadr"
version = "0.20.0"
description = "CLI to help with an ADR process lifecycle (proposal/approval/rejection/deprecation/superseeding), which used git."
license = "MIT"
homepage = "https://github.com/opinionated-digital-center/pyadr"
authors = ["Emmanuel Sciara <emmanuel.sciara@gmail.com>"]
packages = [
    { include = "pyadr" },
]
keywords = ["pyadr", "adr"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.8.1, <3.12"
cleo = "^0.8.1"
#############################
# Add you dependencies here #
#############################
python-slugify = "^8.0.1"
loguru = "^0"
gitpython = "^3.1"

[tool.poetry.group.dev.dependencies]
tox = "^3.14"
tox-pyenv = "^1.1"
rope = "^0"
pytest = "^7.2.2"
pytest-cov = "^4.0"
pytest-mock = "^3.10"
pytest-html = "^3.2"
pytest-asyncio = "^0"
behave4git = "^0"
PyHamcrest = "^2.0"
flake8 = "^6.0"
flake8-bugbear = "^23.3.12"
pydocstyle = "^6.3"
pylint = "^2.17"
yapf = "^0"
mypy = "^1.2"
types-python-slugify = "^6"
black = "^23.3.0"
isort = "^5.12"
sphinx = "^6.2"
sphinx-autodoc-typehints = "^1.23"
sphinx-autobuild = "^2021"
sphinx_rtd_theme = "^1"
m2r = "^0"
bpython = "^0"
invoke = "^2.0.0"

[tool.poetry.scripts]
pyadr = "pyadr.cli:main"
git-adr = "pyadr.git.cli:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=pyadr --cov-report html:reports/python/htmlcov --cov-report xml:reports/python/coverage.xml --cov-report=term --junitxml=reports/python/xunit.xml"
testpaths = [
    "tests",
]

# following black's doc for compatibility
# See https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#pylint
[tool.pylint.messages_control]
disable = "C0114, C0116, wrong-import-order, missing-class-docstring, W1203, W0511"

[tool.pylint.redefined-outer-name]
ignore = "tests"

[tool.pylint.format]
max-line-length = "88"

[tool.isort]
# following black's doc for compatibility
# See https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#isort
profile = "black"

[tool.black]
target_version = ["py39"]

[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"
